--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "expo": "~48.0.10",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-svg": "13.4.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
